fix: pin align

--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ h1 {
     position: absolute;
     top: -10px;
     left: 50%;
+    translate: -50% 0;
 }
 
 /***
